fix(docs): wrap error message text inside box

--- a/docs/src/templates/css/docs.css
+++ b/docs/src/templates/css/docs.css
@@ -502,5 +502,4 @@ pre ol li {
   top: 10px;
   font-size: 16px;
   word-break: normal;
-  word-wrap: normal;
 }
